Integrate Flask WTF forms

--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -13,18 +13,29 @@
     <h2>Choose the best answer among the choices</h2>
 
     <form action="/electronics" method="post">
-        {% for question in questions %}
-            <div>
-                <p>{{ question['id']}}. {{question['content'] }}</p>
-                {% for option in question['options'] %}
+        {{ form.csrf_token }}
+    
+        {% for question in form %}
+        <div>
+            <p>{{ question.label.text['content']}}</p>
+                {% for option in question.choices %}
                     <label>
-                        <input type="radio" name="q{{ question['id'] }}" value="{{ option['letter'] }}">
-                        {{ option['content'] }}
+                        <input type="radio" name="q{{ question.label.text['id'] }}" value="{{ option['letter']}}"> <!-- This is for user input choice -->
+
+                        {{ option['content']}} <!-- This is to display the choices-->
                     </label><br>
                 {% endfor %}
+                {% if question.errors %}
+            <div class="invalid-feedback">
+                {% for error in question.errors %}
+                <span>{{ error }}</span><br>
+                {% endfor %}
             </div>
+            {% endif %}
+                    
+        </div>
         {% endfor %}
-        <input type="hidden" name="user_id" value="1"> <!-- You can replace '1' with the actual user ID -->
+       
         <br>
         <button type="submit">Submit Answers</button>
     </form>
