--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -20,9 +20,9 @@
             <p>{{ question.label.text['content']}}</p>
                 {% for option in question.choices %}
                     <label>
-                        <input type="radio" name="q{{ question.label.text['id'] }}" value="{{ option['letter']}}"> <!-- This is for user input choice -->
+                        <input type="radio" name="q{{ question.label.text['id'] }}" value="{{ option[0]}}"> <!-- This is for user input letter choice -->
 
-                        {{ option['content']}} <!-- This is to display the choices-->
+                        {{ option[1] }} <!-- This is to display the content of the choices (access the content of the tuple in the question forms)-->
                     </label><br>
                 {% endfor %}
                 {% if question.errors %}
