--- a/templates/home.html
+++ b/templates/home.html
@@ -7,8 +7,11 @@
     
 </head>
 <body>
-<h1>ECE Topics</h1>
+<h1>ECEbix</h1>
+
+<h2>Choose Topics</h2>
 <a href = "{{url_for('elecs')}}">Electronics</a>
+
 
 
 </body>
