--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -17,7 +17,11 @@
 </head>
 
 <body>
-
+    <div class="border-top pt-3">
+        <small class="text-muted">
+         <a class="ml-2" href="{{ url_for('logout') }}">Log out</a>
+        </small>
+    </div>
     <h1>Quiz</h1>
     <h2>Choose the best answer among the choices</h2>
     
