--- a/templates/login_quiz.html
+++ b/templates/login_quiz.html
@@ -78,7 +78,7 @@
             <br>
             <div>
                 <small class="text-muted ml-2">
-                    <a href="{{url_for('register')}}">No account? Registered for an account</a>
+                    <a href="{{url_for('register')}}">No account yet? Register now</a>
                 </small>
             </div>
             
