--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,7 @@
 <h1>ECEbix</h1>
 
 <h2>Choose Topics</h2>
-<a href = "{{url_for('elecs')}}">Electronics</a>
+<a href = "{{url_for('electronics')}}">Electronics</a>
 
 
 
