--- a/templates/result1.html
+++ b/templates/result1.html
@@ -53,6 +53,6 @@
     </ol>
     <p>Score: {{no_correct_answer}} out of {{total_questions}}, {{score_percentage}}%</p>
     <br>
-    <button type="button" onclick="window.location.href = '{{url_for('elecs')}}';">Restart the Test</button>
+    <button type="button" onclick="window.location.href = '{{url_for('electronics')}}';">Restart the Test</button>
 </body>
 </html>
