--- a/templates/result1.html
+++ b/templates/result1.html
@@ -54,5 +54,6 @@
     <p>Score: {{no_correct_answer}} out of {{total_questions}}, {{score_percentage}}%</p>
     <br>
     <button type="button" onclick="window.location.href = '{{url_for('electronics')}}';">Restart the Test</button>
+    <button type="button" onclick="window.location.href = '{{url_for('answers')}}';">Correct Answers</button>
 </body>
 </html>
