--- a/templates/login_quiz.html
+++ b/templates/login_quiz.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register</title>
+    <title>ECEBix-Login</title>
     <link rel="stylesheet" href="static/main.css">
 
     <style>
@@ -11,6 +11,11 @@
             margin: 5px;
             padding-left: 6px;
         }
+        .content-section {
+    max-width: 300px; /* Adjust this value to change the maximum width of the form */
+    margin: 1 auto; /* This will center the form horizontally */
+        }
+
        
     </style>
     
@@ -18,7 +23,7 @@
 
 <body>
 
-    <h1>Login</h1>
+    <h1>Login your account</h1>
     {% with messages = get_flashed_messages() %}
   {% if messages %}
     <ul>
