Organize the endpoints of the website

--- a/templates/correct_answers.html
+++ b/templates/correct_answers.html
@@ -13,7 +13,7 @@
         {%endfor%}
     
     </ol>
-<button type="button" onclick="window.location.href = '{{url_for('home')}}';">Back to Home</button> 
+<button type="button" onclick="window.location.href = '{{url_for('courses')}}';">Back to Home</button> 
 <div>
 <br>
 <button type="button" onclick="window.location.href = '{{url_for('electronics')}}';">Restart the Test</button>    
