--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -30,7 +30,7 @@
     <h1>Electronics</h1>
     <h2>Choose the best answer among the choices</h2>
     <br>
-    <form action="/home/electronics" method="post">
+    <form action="/courses/electronics" method="post">
         {{ form.csrf_token }}
         <input type="hidden" name="user_id" value="{{ session.user_id }}">
         <ol type = "1">
