--- a/templates/register_quiz.html
+++ b/templates/register_quiz.html
@@ -19,7 +19,12 @@
     margin: 1 auto; /* This will center the form horizontally */
         }
 
+        a.ml-2 {
    
+   text-decoration: none; /* Remove underline from anchor tags */
+   font-size: 15px; /* Set the font size */
+   color: #124ad7; /* Set the text color */
+       }
 
     </style>
     
