Add CSS style in Login and Registration Page

--- a/templates/homev2.html
+++ b/templates/homev2.html
@@ -63,7 +63,8 @@
 
 <nav>
         <ul>
-            <li class="Title">ECEbix</li>
+      
+            <li class="Title">ECEBix</li>
             <li class="electronics"><a href = "{{url_for('electronics')}}">Electronics</a></li>
             <li class="communications"><a href = "{{url_for('electronics')}}">Communications</a></li>
             <li class="geas"><a href = "{{url_for('electronics')}}">GEAS</a></li>
