--- a/templates/homev1.html
+++ b/templates/homev1.html
@@ -75,7 +75,7 @@
 
 <nav>
         <ul>
-            <li class="title-nav">ECEbix</li>
+            <li class="title-nav">ECEBix</li>
             <li class="electronics"><a href = "{{url_for('electronics')}}">Electronics</a></li>
             <li class="communications"><a href = "{{url_for('electronics')}}">Communications</a></li>
             <li class="geas"><a href = "{{url_for('electronics')}}">GEAS</a></li>
