--- a/templates/register_quiz.html
+++ b/templates/register_quiz.html
@@ -15,7 +15,7 @@
             width: 200px; /* Adjust this value to change the length of the input fields */
         }
         .content-section {
-    max-width: 400px; /* Adjust this value to change the maximum width of the form */
+    max-width: 430px; /* Adjust this value to change the maximum width of the form */
     margin: 1 auto; /* This will center the form horizontally */
         }
 
@@ -25,16 +25,48 @@
    font-size: 15px; /* Set the font size */
    color: #124ad7; /* Set the text color */
        }
+    div.invalid-feedback{
 
+        color: #eb0134;
+    }
+    div.container {
+            width: 38%; /* Adjust the width as needed */
+            margin: 0 auto; /* Center the container horizontally */
+            margin-top: 50px;
+            border: 1px solid #ccc; /* Add a border for the rectangle effect */
+            padding: 20px; /* Add padding for spacing inside the container */
+            box-sizing: border-box; /* Include padding and border in the width */
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+    h1.register-header{
+        color: #124a83;
+        margin-left: 25px;
+        margin-bottom: 10px;
+        font-weight: normal;
+        font-size: 27px;
+
+    }
+    div.image-heading-container{
+       
+    display: flex; /* Use flexbox to arrange items horizontally */
+    align-items: center; /* Center items vertically */
+    }
+  
+    
     </style>
     
 </head>
 
 <body>
+    <div class="container">
 
-    <h1>Register</h1>
    
     <div class="content-section">
+        <div class="image-heading-container">
+            <img src="static\logo.png" alt="Example Image" width="100" height="100">
+            <h1 class="register-header">Create an Account</h1>
+        </div>
+        
         <form method="POST" action="">
             {{ form.hidden_tag() }}
             <fieldset class="form-group">
@@ -119,7 +151,7 @@
 
      
     </div>
-    
+</div>
     
 
 </body>
